# opnGL_tests

./: CMakeLists.txt  light.cpp  light2.cpp  main.cpp
assets/: test.fragment.glsl  test.vertex.glsl
assets/light/: l1.fragment.glsl  l1.vertex.glsl  l2.fragment.glsl  l2.vertex.glsl  l3.fragment.glsl  l3.vertex.glsl
core/: drawing.cpp  shader.cpp
includes/: camera.h  drawing.h  shader.h
